src/main/resources/tests/Semantics/good/putType.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure ExampleProcedure is
begin
   put('a'); -- Print the character 'a'
end ExampleProcedure;
