src/main/resources/tests/Semantics/bad/whileLoop2.canAda
with Ada.Text_IO; use Ada.Text_IO;
procedure TestLoops is
   variable1 : integer;
   variable2 : character;
begin
   while variable1 loop -- Error: variable1 is not a boolean
      put(variable2);
   end loop;
end TestLoops;
